Damerian idea localisation

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2016,348 +2016,348 @@
  A58_ideas_3:0 "Damerian Ideas 3"
  A58_ideas_3_start:0 "Damerian Traditions 3"
  A58_ideas_3_bonus:0 "Damerian Ambition 3"
- A58_idea_1_3:0 "Damerian 1"
+ A58_idea_1_3:0 "Dame's Finest"
  A58_idea_1_3_desc:0 "Damerian 1 desc"
- A58_idea_2_3:0 "Damerian 2"
+ A58_idea_2_3:0 " Finest Footmen Forever Found"
  A58_idea_2_3_desc:0 "Damerian 2 desc"
- A58_idea_3_3:0 "Damerian 3"
+ A58_idea_3_3:0 "Houses Dameris, Silmuna"
  A58_idea_3_3_desc:0 "Damerian 3 desc"
- A58_idea_4_3:0 "Damerian 4"
+ A58_idea_4_3:0 "Anben, Anbennar"
  A58_idea_4_3_desc:0 "Damerian 4 desc"
- A58_idea_5_3:0 "Damerian 5"
+ A58_idea_5_3:0 "Mastery over Diplomacy"
  A58_idea_5_3_desc:0 "Damerian 5 desc"
- A58_idea_6_3:0 "Damerian 6"
+ A58_idea_6_3:0 "Silver Tongues"
  A58_idea_6_3_desc:0 "Damerian 6 desc"
- A58_idea_7_3:0 "Damerian 7"
+ A58_idea_7_3:0 "Married to the Sea"
  A58_idea_7_3_desc:0 "Damerian 7 desc"
 
  B78_ideas_1:0 "Carnetori Ideas 1"
  B78_ideas_1_start:0 "Carnetori Traditions 1"
  B78_ideas_1_bonus:0 "Carnetori Ambition 1"
- B78_idea_1_1:0 "Carnetori 1"
+ B78_idea_1_1:0 "CPeople of the axe"
  B78_idea_1_1_desc:0 "Carnetori 1 desc"
- B78_idea_2_1:0 "Carnetori 2"
+ B78_idea_2_1:0 " Finest Footmen Forever Found"
  B78_idea_2_1_desc:0 "Carnetori 2 desc"
- B78_idea_3_1:0 "Carnetori 3"
+ B78_idea_3_1:0 "The Third Kingdom"
  B78_idea_3_1_desc:0 "Carnetori 3 desc"
- B78_idea_4_1:0 "Carnetori 4"
+ B78_idea_4_1:0 "Anben, Anbennar"
  B78_idea_4_1_desc:0 "Carnetori 4 desc"
- B78_idea_5_1:0 "Carnetori 5"
+ B78_idea_5_1:0 "Druids of the deruwren forest"
  B78_idea_5_1_desc:0 "Carnetori 5 desc"
- B78_idea_6_1:0 "Carnetori 6"
+ B78_idea_6_1:0 "Silver Tongues"
  B78_idea_6_1_desc:0 "Carnetori 6 desc"
- B78_idea_7_1:0 "Carnetori 7"
+ B78_idea_7_1:0 "Legacy of the Carneteris dynasty"
  B78_idea_7_1_desc:0 "Carnetori 7 desc" 
 
  B78_ideas_2:0 "Carnetori Ideas 2"
  B78_ideas_2_start:0 "Carnetori Traditions 2"
  B78_ideas_2_bonus:0 "Carnetori Ambition 2"
- B78_idea_1_2:0 "Carnetori 1"
+ B78_idea_1_2:0 "People of the axe"
  B78_idea_1_2_desc:0 "Carnetori 1 desc"
- B78_idea_2_2:0 "Carnetori 2"
+ B78_idea_2_2:0 " Finest Footmen Forever Found"
  B78_idea_2_2_desc:0 "Carnetori 2 desc"
- B78_idea_3_2:0 "Carnetori 3"
+ B78_idea_3_2:0 "The Third Kingdom"
  B78_idea_3_2_desc:0 "Carnetori 3 desc"
- B78_idea_4_2:0 "Carnetori 4"
+ B78_idea_4_2:0 "Anben, Anbennar"
  B78_idea_4_2_desc:0 "Carnetori 4 desc"
- B78_idea_5_2:0 "Carnetori 5"
+ B78_idea_5_2:0 "Druids of the deruwren forest"
  B78_idea_5_2_desc:0 "Carnetori 5 desc"
- B78_idea_6_2:0 "Carnetori 6"
+ B78_idea_6_2:0 "Silver Tongues"
  B78_idea_6_2_desc:0 "Carnetori 6 desc"
- B78_idea_7_2:0 "Carnetori 7"
+ B78_idea_7_2:0 "Legacy of the Carneteris dynasty"
  B78_idea_7_2_desc:0 "Carnetori 7 desc" 
 
  B78_ideas_3:0 "Carnetori Ideas 3"
  B78_ideas_3_start:0 "Carnetori Traditions 3"
  B78_ideas_3_bonus:0 "Carnetori Ambition 3"
- B78_idea_1_3:0 "Carnetori 1"
+ B78_idea_1_3:0 "People of the axe"
  B78_idea_1_3_desc:0 "Carnetori 1 desc"
- B78_idea_2_3:0 "Carnetori 2"
+ B78_idea_2_3:0 " Finest Footmen Forever Found"
  B78_idea_2_3_desc:0 "Carnetori 2 desc"
- B78_idea_3_3:0 "Carnetori 3"
+ B78_idea_3_3:0 "The Third Kingdom"
  B78_idea_3_3_desc:0 "Carnetori 3 desc"
- B78_idea_4_3:0 "Carnetori 4"
+ B78_idea_4_3:0 "Anben, Anbennar"
  B78_idea_4_3_desc:0 "Carnetori 4 desc"
- B78_idea_5_3:0 "Carnetori 5"
+ B78_idea_5_3:0 "Druids of the deruwren forest"
  B78_idea_5_3_desc:0 "Carnetori 5 desc"
- B78_idea_6_3:0 "Carnetori 6"
+ B78_idea_6_3:0 "Silver Tongues"
  B78_idea_6_3_desc:0 "Carnetori 6 desc"
- B78_idea_7_3:0 "Carnetori 7"
+ B78_idea_7_3:0 "Legacy of the Carneteris dynasty"
  B78_idea_7_3_desc:0 "Carnetori 7 desc"
 
 
  A38_ideas_1:0 "Anbenncost Ideas 1"
  A38_ideas_1_start:0 "Anbenncost Traditions 1"
  A38_ideas_1_bonus:0 "Anbenncost Ambition 1"
- A38_idea_1_1:0 "Anbenncost 1"
+ A38_idea_1_1:0 "City of World's Desire"
  A38_idea_1_1_desc:0 "Anbenncost 1 desc"
- A38_idea_2_1:0 "Anbenncost 2"
+ A38_idea_2_1:0 " Finest Footmen Forever Found"
  A38_idea_2_1_desc:0 "Anbenncost 2 desc"
- A38_idea_3_1:0 "Anbenncost 3"
+ A38_idea_3_1:0 "For Many, By Many"
  A38_idea_3_1_desc:0 "Anbenncost 3 desc"
- A38_idea_4_1:0 "Anbenncost 4"
+ A38_idea_4_1:0 "Anben, Anbennar"
  A38_idea_4_1_desc:0 "Anbenncost 4 desc"
- A38_idea_5_1:0 "Anbenncost 5"
+ A38_idea_5_1:0 "End of Each Road"
  A38_idea_5_1_desc:0 "Anbenncost 5 desc"
- A38_idea_6_1:0 "Anbenncost 6"
+ A38_idea_6_1:0 "Silver Tongues"
  A38_idea_6_1_desc:0 "Anbenncost 6 desc"
- A38_idea_7_1:0 "Anbenncost 7"
+ A38_idea_7_1:0 "Married to the Sea"
  A38_idea_7_1_desc:0 "Anbenncost 7 desc" 
 
  A38_ideas_2:0 "Anbenncost Ideas 2"
  A38_ideas_2_start:0 "Anbenncost Traditions 2"
  A38_ideas_2_bonus:0 "Anbenncost Ambition 2"
- A38_idea_1_2:0 "Anbenncost 1"
+ A38_idea_1_2:0 "City of World's Desire"
  A38_idea_1_2_desc:0 "Anbenncost 1 desc"
- A38_idea_2_2:0 "Anbenncost 2"
+ A38_idea_2_2:0 " Finest Footmen Forever Found"
  A38_idea_2_2_desc:0 "Anbenncost 2 desc"
- A38_idea_3_2:0 "Anbenncost 3"
+ A38_idea_3_2:0 "For Many, By Many"
  A38_idea_3_2_desc:0 "Anbenncost 3 desc"
- A38_idea_4_2:0 "Anbenncost 4"
+ A38_idea_4_2:0 "Anben, Anbennar"
  A38_idea_4_2_desc:0 "Anbenncost 4 desc"
- A38_idea_5_2:0 "Anbenncost 5"
+ A38_idea_5_2:0 "End of Each Road"
  A38_idea_5_2_desc:0 "Anbenncost 5 desc"
- A38_idea_6_2:0 "Anbenncost 6"
+ A38_idea_6_2:0 "Silver Tongues"
  A38_idea_6_2_desc:0 "Anbenncost 6 desc"
- A38_idea_7_2:0 "Anbenncost 7"
+ A38_idea_7_2:0 "Married to the Sea"
  A38_idea_7_2_desc:0 "Anbenncost 7 desc" 
 
  A38_ideas_3:0 "Anbenncost Ideas 3"
  A38_ideas_3_start:0 "Anbenncost Traditions 3"
  A38_ideas_3_bonus:0 "Anbenncost Ambition 3"
- A38_idea_1_3:0 "Anbenncost 1"
+ A38_idea_1_3:0 "City of World's Desire"
  A38_idea_1_3_desc:0 "Anbenncost 1 desc"
- A38_idea_2_3:0 "Anbenncost 2"
+ A38_idea_2_3:0 " Finest Footmen Forever Found"
  A38_idea_2_3_desc:0 "Anbenncost 2 desc"
- A38_idea_3_3:0 "Anbenncost 3"
+ A38_idea_3_3:0 "For Many, By Many"
  A38_idea_3_3_desc:0 "Anbenncost 3 desc"
- A38_idea_4_3:0 "Anbenncost 4"
+ A38_idea_4_3:0 "Anben, Anbennar"
  A38_idea_4_3_desc:0 "Anbenncost 4 desc"
- A38_idea_5_3:0 "Anbenncost 5"
+ A38_idea_5_3:0 "End of Each Road"
  A38_idea_5_3_desc:0 "Anbenncost 5 desc"
- A38_idea_6_3:0 "Anbenncost 6"
+ A38_idea_6_3:0 "Silver Tongues"
  A38_idea_6_3_desc:0 "Anbenncost 6 desc"
- A38_idea_7_3:0 "Anbenncost 7"
+ A38_idea_7_3:0 "Married to the Sea"
  A38_idea_7_3_desc:0 "Anbenncost 7 desc" 
 
 
  W12_ideas_1:0 "Garioncost Ideas 1"
  W12_ideas_1_start:0 "Garioncost Traditions 1"
  W12_ideas_1_bonus:0 "Garioncost Ambition 1"
- W12_idea_1_1:0 "Garioncost 1"
+ W12_idea_1_1:0 "A Learned Man's City"
  W12_idea_1_1_desc:0 "Garioncost 1 desc"
- W12_idea_2_1:0 "Garioncost 2"
+ W12_idea_2_1:0 " Finest Footmen Forever Found"
  W12_idea_2_1_desc:0 "Garioncost 2 desc"
- W12_idea_3_1:0 "Garioncost 3"
+ W12_idea_3_1:0 "Future Warfare"
  W12_idea_3_1_desc:0 "Garioncost 3 desc"
- W12_idea_4_1:0 "Garioncost 4"
+ W12_idea_4_1:0 "Anben, Anbennar"
  W12_idea_4_1_desc:0 "Garioncost 4 desc"
- W12_idea_5_1:0 "Garioncost 5"
+ W12_idea_5_1:0 "Second of the Ear"
  W12_idea_5_1_desc:0 "Garioncost 5 desc"
- W12_idea_6_1:0 "Garioncost 6"
+ W12_idea_6_1:0 "Silver Tongues"
  W12_idea_6_1_desc:0 "Garioncost 6 desc"
- W12_idea_7_1:0 "Garioncost 7"
+ W12_idea_7_1:0 "Married to the Sea"
  W12_idea_7_1_desc:0 "Garioncost 7 desc" 
 
  W12_ideas_2:0 "Garioncost Ideas 2"
  W12_ideas_2_start:0 "Garioncost Traditions 2"
  W12_ideas_2_bonus:0 "Garioncost Ambition 2"
- W12_idea_1_2:0 "Garioncost 1"
+ W12_idea_1_2:0 "A Learned Man's City"
  W12_idea_1_2_desc:0 "Garioncost 1 desc"
- W12_idea_2_2:0 "Garioncost 2"
+ W12_idea_2_2:0 " Finest Footmen Forever Found"
  W12_idea_2_2_desc:0 "Garioncost 2 desc"
- W12_idea_3_2:0 "Garioncost 3"
+ W12_idea_3_2:0 "Future Warfare"
  W12_idea_3_2_desc:0 "Garioncost 3 desc"
- W12_idea_4_2:0 "Garioncost 4"
+ W12_idea_4_2:0 "Anben, Anbennar"
  W12_idea_4_2_desc:0 "Garioncost 4 desc"
- W12_idea_5_2:0 "Garioncost 5"
+ W12_idea_5_2:0 "Second of the Ear"
  W12_idea_5_2_desc:0 "Garioncost 5 desc"
- W12_idea_6_2:0 "Garioncost 6"
+ W12_idea_6_2:0 "Silver Tongues"
  W12_idea_6_2_desc:0 "Garioncost 6 desc"
- W12_idea_7_2:0 "Garioncost 7"
+ W12_idea_7_2:0 "Married to the Sea"
  W12_idea_7_2_desc:0 "Garioncost 7 desc" 
 
  W12_ideas_3:0 "Garioncost Ideas 3"
  W12_ideas_3_start:0 "Garioncost Traditions 3"
  W12_ideas_3_bonus:0 "Garioncost Ambition 3"
- W12_idea_1_3:0 "Garioncost 1"
+ W12_idea_1_3:0 "A Learned Man's City"
  W12_idea_1_3_desc:0 "Garioncost 1 desc"
- W12_idea_2_3:0 "Garioncost 2"
+ W12_idea_2_3:0 " Finest Footmen Forever Found"
  W12_idea_2_3_desc:0 "Garioncost 2 desc"
- W12_idea_3_3:0 "Garioncost 3"
+ W12_idea_3_3:0 "Future Warfare"
  W12_idea_3_3_desc:0 "Garioncost 3 desc"
- W12_idea_4_3:0 "Garioncost 4"
+ W12_idea_4_3:0 "Anben, Anbennar"
  W12_idea_4_3_desc:0 "Garioncost 4 desc"
- W12_idea_5_3:0 "Garioncost 5"
+ W12_idea_5_3:0 "Second of the Ear"
  W12_idea_5_3_desc:0 "Garioncost 5 desc"
- W12_idea_6_3:0 "Garioncost 6"
+ W12_idea_6_3:0 "Silver Tongues"
  W12_idea_6_3_desc:0 "Garioncost 6 desc"
- W12_idea_7_3:0 "Garioncost 7"
+ W12_idea_7_3:0 "Married to the Sea"
  W12_idea_7_3_desc:0 "Garioncost 7 desc" 
 
 
  W11_ideas_1:0 "Orda Dameris Ideas 1"
  W11_ideas_1_start:0 "Orda Dameris Traditions 1"
  W11_ideas_1_bonus:0 "Orda Dameris Ambition 1"
- W11_idea_1_1:0 "Orda Dameris 1"
+ W11_idea_1_1:0 "Hearts of Steel"
  W11_idea_1_1_desc:0 "Orda Dameris 1 desc"
- W11_idea_2_1:0 "Orda Dameris 2"
+ W11_idea_2_1:0 " Finest Footmen Forever Found"
  W11_idea_2_1_desc:0 "Orda Dameris 2 desc"
- W11_idea_3_1:0 "Orda Dameris 3"
+ W11_idea_3_1:0 "Funding Our Mission"
  W11_idea_3_1_desc:0 "Orda Dameris 3 desc"
- W11_idea_4_1:0 "Orda Dameris 4"
+ W11_idea_4_1:0 "Anben, Anbennar"
  W11_idea_4_1_desc:0 "Orda Dameris 4 desc"
- W11_idea_5_1:0 "Orda Dameris 5"
+ W11_idea_5_1:0 "Candidates From the Three Cities"
  W11_idea_5_1_desc:0 "Orda Dameris 5 desc"
- W11_idea_6_1:0 "Orda Dameris 6"
+ W11_idea_6_1:0 "Silver Tongues"
  W11_idea_6_1_desc:0 "Orda Dameris 6 desc"
- W11_idea_7_1:0 "Orda Dameris 7"
+ W11_idea_7_1:0 "Married to the Sea"
  W11_idea_7_1_desc:0 "Orda Dameris 7 desc" 
 
  W11_ideas_2:0 "Orda Dameris Ideas 2"
  W11_ideas_2_start:0 "Orda Dameris Traditions 2"
  W11_ideas_2_bonus:0 "Orda Dameris Ambition 2"
- W11_idea_1_2:0 "Orda Dameris 1"
+ W11_idea_1_2:0 "Hearts of Steel"
  W11_idea_1_2_desc:0 "Orda Dameris 1 desc"
- W11_idea_2_2:0 "Orda Dameris 2"
+ W11_idea_2_2:0 " Finest Footmen Forever Found"
  W11_idea_2_2_desc:0 "Orda Dameris 2 desc"
- W11_idea_3_2:0 "Orda Dameris 3"
+ W11_idea_3_2:0 "Funding Our Mission"
  W11_idea_3_2_desc:0 "Orda Dameris 3 desc"
- W11_idea_4_2:0 "Orda Dameris 4"
+ W11_idea_4_2:0 "Anben, Anbennar"
  W11_idea_4_2_desc:0 "Orda Dameris 4 desc"
- W11_idea_5_2:0 "Orda Dameris 5"
+ W11_idea_5_2:0 "Candidates From the Three Cities"
  W11_idea_5_2_desc:0 "Orda Dameris 5 desc"
- W11_idea_6_2:0 "Orda Dameris 6"
+ W11_idea_6_2:0 "Silver Tongues"
  W11_idea_6_2_desc:0 "Orda Dameris 6 desc"
- W11_idea_7_2:0 "Orda Dameris 7"
+ W11_idea_7_2:0 "Married to the Sea"
  W11_idea_7_2_desc:0 "Orda Dameris 7 desc" 
 
  W11_ideas_3:0 "Orda Dameris Ideas 3"
  W11_ideas_3_start:0 "Orda Dameris Traditions 3"
  W11_ideas_3_bonus:0 "Orda Dameris Ambition 3"
- W11_idea_1_3:0 "Orda Dameris 1"
+ W11_idea_1_3:0 "Hearts of Steel"
  W11_idea_1_3_desc:0 "Orda Dameris 1 desc"
- W11_idea_2_3:0 "Orda Dameris 2"
+ W11_idea_2_3:0 " Finest Footmen Forever Found"
  W11_idea_2_3_desc:0 "Orda Dameris 2 desc"
- W11_idea_3_3:0 "Orda Dameris 3"
+ W11_idea_3_3:0 "Funding Our Mission"
  W11_idea_3_3_desc:0 "Orda Dameris 3 desc"
- W11_idea_4_3:0 "Orda Dameris 4"
+ W11_idea_4_3:0 "Anben, Anbennar"
  W11_idea_4_3_desc:0 "Orda Dameris 4 desc"
- W11_idea_5_3:0 "Orda Dameris 5"
+ W11_idea_5_3:0 "Candidates From the Three Cities"
  W11_idea_5_3_desc:0 "Orda Dameris 5 desc"
- W11_idea_6_3:0 "Orda Dameris 6"
+ W11_idea_6_3:0 "Silver Tongues"
  W11_idea_6_3_desc:0 "Orda Dameris 6 desc"
- W11_idea_7_3:0 "Orda Dameris 7"
+ W11_idea_7_3:0 "Married to the Sea"
  W11_idea_7_3_desc:0 "Orda Dameris 7 desc" 
 
 
  A41_ideas_1:0 "Damish Temple Ideas 1"
  A41_ideas_1_start:0 "Damish Temple Traditions 1"
  A41_ideas_1_bonus:0 "Damish Temple Ambition 1"
- A41_idea_1_1:0 "Damish Temple 1"
+ A41_idea_1_1:0 "Damestear Isle"
  A41_idea_1_1_desc:0 "Damish Temple 1 desc"
- A41_idea_2_1:0 "Damish Temple 2"
+ A41_idea_2_1:0 " Finest Footmen Forever Found"
  A41_idea_2_1_desc:0 "Damish Temple 2 desc"
- A41_idea_3_1:0 "Damish Temple 3"
+ A41_idea_3_1:0 "Men of Faith"
  A41_idea_3_1_desc:0 "Damish Temple 3 desc"
- A41_idea_4_1:0 "Damish Temple 4"
+ A41_idea_4_1:0 "Anben, Anbennar"
  A41_idea_4_1_desc:0 "Damish Temple 4 desc"
- A41_idea_5_1:0 "Damish Temple 5"
+ A41_idea_5_1:0 "Moonmount Council"
  A41_idea_5_1_desc:0 "Damish Temple 5 desc"
- A41_idea_6_1:0 "Damish Temple 6"
+ A41_idea_6_1:0 "Silver Tongues"
  A41_idea_6_1_desc:0 "Damish Temple 6 desc"
- A41_idea_7_1:0 "Damish Temple 7"
+ A41_idea_7_1:0 "Married to the Sea"
  A41_idea_7_1_desc:0 "Damish Temple 7 desc" 
 
  A41_ideas_2:0 "Damish Temple Ideas 2"
  A41_ideas_2_start:0 "Damish Temple Traditions 2"
  A41_ideas_2_bonus:0 "Damish Temple Ambition 2"
- A41_idea_1_2:0 "Damish Temple 1"
+ A41_idea_1_2:0 "Damestear Isle"
  A41_idea_1_2_desc:0 "Damish Temple 1 desc"
- A41_idea_2_2:0 "Damish Temple 2"
+ A41_idea_2_2:0 " Finest Footmen Forever Found"
  A41_idea_2_2_desc:0 "Damish Temple 2 desc"
- A41_idea_3_2:0 "Damish Temple 3"
+ A41_idea_3_2:0 "Men of Faith"
  A41_idea_3_2_desc:0 "Damish Temple 3 desc"
- A41_idea_4_2:0 "Damish Temple 4"
+ A41_idea_4_2:0 "Anben, Anbennar"
  A41_idea_4_2_desc:0 "Damish Temple 4 desc"
- A41_idea_5_2:0 "Damish Temple 5"
+ A41_idea_5_2:0 "Moonmount Council"
  A41_idea_5_2_desc:0 "Damish Temple 5 desc"
- A41_idea_6_2:0 "Damish Temple 6"
+ A41_idea_6_2:0 "Silver Tongues"
  A41_idea_6_2_desc:0 "Damish Temple 6 desc"
- A41_idea_7_2:0 "Damish Temple 7"
+ A41_idea_7_2:0 "Married to the Sea"
  A41_idea_7_2_desc:0 "Damish Temple 7 desc" 
 
  A41_ideas_3:0 "Damish Temple Ideas 3"
  A41_ideas_3_start:0 "Damish Temple Traditions 3"
  A41_ideas_3_bonus:0 "Damish Temple Ambition 3"
- A41_idea_1_3:0 "Damish Temple 1"
+ A41_idea_1_3:0 "Damestear Isle"
  A41_idea_1_3_desc:0 "Damish Temple 1 desc"
- A41_idea_2_3:0 "Damish Temple 2"
+ A41_idea_2_3:0 " Finest Footmen Forever Found"
  A41_idea_2_3_desc:0 "Damish Temple 2 desc"
- A41_idea_3_3:0 "Damish Temple 3"
+ A41_idea_3_3:0 "Men of Faith"
  A41_idea_3_3_desc:0 "Damish Temple 3 desc"
- A41_idea_4_3:0 "Damish Temple 4"
+ A41_idea_4_3:0 "Anben, Anbennar"
  A41_idea_4_3_desc:0 "Damish Temple 4 desc"
- A41_idea_5_3:0 "Damish Temple 5"
+ A41_idea_5_3:0 "Moonmount Council"
  A41_idea_5_3_desc:0 "Damish Temple 5 desc"
- A41_idea_6_3:0 "Damish Temple 6"
+ A41_idea_6_3:0 "Silver Tongues"
  A41_idea_6_3_desc:0 "Damish Temple 6 desc"
- A41_idea_7_3:0 "Damish Temple 7"
+ A41_idea_7_3:0 "Married to the Sea"
  A41_idea_7_3_desc:0 "Damish Temple 7 desc" 
 
 
  A85_ideas_1:0 "Magisterium Ideas 1"
  A85_ideas_1_start:0 "Magisterium Traditions 1"
  A85_ideas_1_bonus:0 "Magisterium Ambition 1"
- A85_idea_1_1:0 "Magisterium 1"
+ A85_idea_1_1:0 "Magic & Awe"
  A85_idea_1_1_desc:0 "Magisterium 1 desc"
- A85_idea_2_1:0 "Magisterium 2"
+ A85_idea_2_1:0 " Finest Footmen Forever Found"
  A85_idea_2_1_desc:0 "Magisterium 2 desc"
- A85_idea_3_1:0 "Magisterium 3"
+ A85_idea_3_1:0 "The Magister Beaurocratic Machine"
  A85_idea_3_1_desc:0 "Magisterium 3 desc"
- A85_idea_4_1:0 "Magisterium 4"
+ A85_idea_4_1:0 "Anben, Anbennar"
  A85_idea_4_1_desc:0 "Magisterium 4 desc"
- A85_idea_5_1:0 "Magisterium 5"
+ A85_idea_5_1:0 "Magister in Every Keep"
  A85_idea_5_1_desc:0 "Magisterium 5 desc"
- A85_idea_6_1:0 "Magisterium 6"
+ A85_idea_6_1:0 "Silver Tongues"
  A85_idea_6_1_desc:0 "Magisterium 6 desc"
- A85_idea_7_1:0 "Magisterium 7"
+ A85_idea_7_1:0 "Married to the Sea"
  A85_idea_7_1_desc:0 "Magisterium 7 desc" 
 
  A85_ideas_2:0 "Magisterium Ideas 2"
  A85_ideas_2_start:0 "Magisterium Traditions 2"
  A85_ideas_2_bonus:0 "Magisterium Ambition 2"
- A85_idea_1_2:0 "Magisterium 1"
+ A85_idea_1_2:0 "Magic & Awe"
  A85_idea_1_2_desc:0 "Magisterium 1 desc"
- A85_idea_2_2:0 "Magisterium 2"
+ A85_idea_2_2:0 " Finest Footmen Forever Found"
  A85_idea_2_2_desc:0 "Magisterium 2 desc"
- A85_idea_3_2:0 "Magisterium 3"
+ A85_idea_3_2:0 "The Magister Beaurocratic Machine"
  A85_idea_3_2_desc:0 "Magisterium 3 desc"
- A85_idea_4_2:0 "Magisterium 4"
+ A85_idea_4_2:0 "Anben, Anbennar"
  A85_idea_4_2_desc:0 "Magisterium 4 desc"
- A85_idea_5_2:0 "Magisterium 5"
+ A85_idea_5_2:0 "Magister in Every Keep"
  A85_idea_5_2_desc:0 "Magisterium 5 desc"
- A85_idea_6_2:0 "Magisterium 6"
+ A85_idea_6_2:0 "Silver Tongues"
  A85_idea_6_2_desc:0 "Magisterium 6 desc"
- A85_idea_7_2:0 "Magisterium 7"
+ A85_idea_7_2:0 "Married to the Sea"
  A85_idea_7_2_desc:0 "Magisterium 7 desc" 
 
  A85_ideas_3:0 "Magisterium Ideas 3"
  A85_ideas_3_start:0 "Magisterium Traditions 3"
  A85_ideas_3_bonus:0 "Magisterium Ambition 3"
- A85_idea_1_3:0 "Magisterium 1"
+ A85_idea_1_3:0 "Magic & Awe"
  A85_idea_1_3_desc:0 "Magisterium 1 desc"
- A85_idea_2_3:0 "Magisterium 2"
+ A85_idea_2_3:0 " Finest Footmen Forever Found"
  A85_idea_2_3_desc:0 "Magisterium 2 desc"
- A85_idea_3_3:0 "Magisterium 3"
+ A85_idea_3_3:0 "The Magister Beaurocratic Machine"
  A85_idea_3_3_desc:0 "Magisterium 3 desc"
- A85_idea_4_3:0 "Magisterium 4"
+ A85_idea_4_3:0 "Anben, Anbennar"
  A85_idea_4_3_desc:0 "Magisterium 4 desc"
- A85_idea_5_3:0 "Magisterium 5"
+ A85_idea_5_3:0 "Magister in Every Keep"
  A85_idea_5_3_desc:0 "Magisterium 5 desc"
- A85_idea_6_3:0 "Magisterium 6"
+ A85_idea_6_3:0 "Silver Tongues"
  A85_idea_6_3_desc:0 "Magisterium 6 desc"
- A85_idea_7_3:0 "Magisterium 7"
+ A85_idea_7_3:0 "Married to the Sea"
  A85_idea_7_3_desc:0 "Magisterium 7 desc" 
 
 
