Nimscodd, Gnomish Hierarchy ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3355,3 +3355,59 @@
  A19_idea_6_3_desc:0 "Portnamm 6 desc"
  A19_idea_7_3:0 "Among Humans, Elves and Halflings"
  A19_idea_7_3_desc:0 "Portnamm 7 desc"
+
+
+ A06_ideas_2:0 "Nimscodd Ideas 2"
+ A06_ideas_2_start:0 "Nimscodd Traditions 2"
+ A06_ideas_2_bonus:0 "Nimscodd Ambition 2"
+ A06_idea_1_2:0 "Reclaimation Army"
+ A06_idea_1_2_desc:0 "Nimscodd 1 desc"
+ A06_idea_2_2:0 "Pioneers Of Artificery"
+ A06_idea_2_2_desc:0 "Nimscodd 2 desc"
+ A06_idea_3_2:0 "Prototype Hierarch-Class Battleships"
+ A06_idea_3_2_desc:0 "Nimscodd 3 desc"
+ A06_idea_4_2:0 "Brilliant Inventions"
+ A06_idea_4_2_desc:0 "Nimscodd 4 desc"
+ A06_idea_5_2:0 "Nimscodd Academy"
+ A06_idea_5_2_desc:0 "Nimscodd 5 desc"
+ A06_idea_6_2:0 "The Future Of Warfare"
+ A06_idea_6_2_desc:0 "Nimscodd 6 desc"
+ A06_idea_7_2:0 "Lessons of Royvibobb"
+ A06_idea_7_2_desc:0 "Nimscodd 7 desc"
+
+ A06_ideas_3:0 "Nimscodd Ideas 3"
+ A06_ideas_3_start:0 "Nimscodd Traditions 3"
+ A06_ideas_3_bonus:0 "Nimscodd Ambition 3"
+ A06_idea_1_3:0 "Reclaimation Army"
+ A06_idea_1_3_desc:0 "Nimscodd 1 desc"
+ A06_idea_2_3:0 "Pioneers Of Artificery"
+ A06_idea_2_3_desc:0 "Nimscodd 2 desc"
+ A06_idea_3_3:0 "Prototype Hierarch-Class Battleships"
+ A06_idea_3_3_desc:0 "Nimscodd 3 desc"
+ A06_idea_4_3:0 "Brilliant Inventions"
+ A06_idea_4_3_desc:0 "Nimscodd 4 desc"
+ A06_idea_5_3:0 "Nimscodd Academy"
+ A06_idea_5_3_desc:0 "Nimscodd 5 desc"
+ A06_idea_6_3:0 "The Future Of Warfare"
+ A06_idea_6_3_desc:0 "Nimscodd 6 desc"
+ A06_idea_7_3:0 "Lessons of Royvibobb"
+ A06_idea_7_3_desc:0 "Nimscodd 7 desc"
+
+
+ A79_ideas_3:0 "Gnomish Hierarchy Ideas 3"
+ A79_ideas_3_start:0 "Gnomish Hierarchy Traditions 3"
+ A79_ideas_3_bonus:0 "Gnomish Hierarchy Ambition 3"
+ A79_idea_1_3:0 "Regulate Research Expeditions"
+ A79_idea_1_3_desc:0 "Gnomish Hierarchy 1 desc"
+ A79_idea_2_3:0 "Pioneers Of Artificery"
+ A79_idea_2_3_desc:0 "Gnomish Hierarchy 2 desc"
+ A79_idea_3_3:0 "Hierarch-Class Battleships"
+ A79_idea_3_3_desc:0 "Gnomish Hierarchy 3 desc"
+ A79_idea_4_3:0 "Brilliant Inventions"
+ A79_idea_4_3_desc:0 "Gnomish Hierarchy 4 desc"
+ A79_idea_5_3:0 "Study The Faiths of Halann"
+ A79_idea_5_3_desc:0 "Gnomish Hierarchy 5 desc"
+ A79_idea_6_3:0 "The Future Of Warfare"
+ A79_idea_6_3_desc:0 "Gnomish Hierarchy 6 desc"
+ A79_idea_7_3:0 "Industrialize the Dragon Coast"
+ A79_idea_7_3_desc:0 "Gnomish Hierarchy 7 desc"
