--- a/localisation/goose_1_35_l_english.yml
+++ b/localisation/goose_1_35_l_english.yml
@@ -76,7 +76,7 @@
  MODIFIER_HAS_MUSKETEER:0 "Country Allows Tridentsmen Infantry"
  MODIFIER_HAS_SAMURAI:0 "Country Allows Samurai Infantry"
  MODIFIER_HAS_GEOBUKSEON:0 "Country Allows Geobukseon Ships"
- MODIFIER_HAS_MAN_OF_WAR:0 "Country Allows Man Of War Ships"
+ MODIFIER_HAS_MAN_OF_WAR:0 "Country Allows Hierarch Ships"
  MODIFIER_HAS_GALLEON:0 "Country Allows Galleon Ships"
  MODIFIER_HAS_GALLEASSE:0 "Country Allows Thornë Ships"
  MODIFIER_HAS_CARAVEL:0 "Country Allows Caravel Ships"
