fixed localisation oopsie

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -701,7 +701,7 @@
  A30_idea_2_2_desc:0 "Wexonard 2 desc"
  A30_idea_3_2:0 "Pax Lothanica"
  A30_idea_3_2_desc:0 "Wexonard 3 desc"
- A30_idea_4_2:0 Those tribes to our Alen near, and those far."
+ A30_idea_4_2:0 "Those tribes to our Alen near, and those far."
  A30_idea_4_2_desc:0 "Wexonard 4 desc"
  A30_idea_5_2:0 "Velvet-veiled Steel"
  A30_idea_5_2_desc:0 "Wexonard 5 desc"
