Nottlan, Sottlan, Small Country ideas

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -94,8 +94,8 @@
  vinlorn_nation_title:0 "Unite the Winelords!"
  rosenica_nation_title:0 "Unite Rosenica"
 
- sottlan_nation_title:0 "Sottlan Forever"
- nottlan_nation_title:0 "Nottlan Together"
+ sottlan_nation_title:0 "Unite the Redfoot!"
+ nottlan_nation_title:0 "Unite the Bluefoot!"
 
  drakksgard_nation_title:0 "Create Drakksgard"
  esedor_nation_title:0 "A New Alenic Realm"
