--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3419,17 +3419,17 @@
  A65_ideas_1:0 "Bluefoot Ideas 1"
  A65_ideas_1_start:0 "Bluefoot Traditions 1"
  A65_ideas_1_bonus:0 "Bluefoot Ambition 1"
- A65_idea_1_1:0 "Resist the alenics"
+ A65_idea_1_1:0 "Resist the Alenics"
  A65_idea_1_1_desc:0 "Bluefoot 1 desc"
  A65_idea_2_1:0 "Halfling Spirit"
  A65_idea_2_1_desc:0 "Bluefoot 2 desc"
- A65_idea_3_1:0 "Widderoy river"
+ A65_idea_3_1:0 "Widderoy Eiver"
  A65_idea_3_1_desc:0 "Bluefoot 3 desc"
  A65_idea_4_1:0 "Cunning Traders"
  A65_idea_4_1_desc:0 "Bluefoot 4 desc"
- A65_idea_5_1:0 "Vet all outsiders"
+ A65_idea_5_1:0 "Vet All Outsiders"
  A65_idea_5_1_desc:0 "Bluefoot 5 desc"
- A65_idea_6_1:0 "Keepers of prosperity"
+ A65_idea_6_1:0 "Keepers of Prosperity"
  A65_idea_6_1_desc:0 "Bluefoot 6 desc"
  A65_idea_7_1:0 "Bushrangers"
  A65_idea_7_1_desc:0 "Bluefoot 7 desc"
@@ -3437,17 +3437,17 @@
  A65_ideas_2:0 "Bluefoot Ideas 2"
  A65_ideas_2_start:0 "Bluefoot Traditions 2"
  A65_ideas_2_bonus:0 "Bluefoot Ambition 2"
- A65_idea_1_2:0 "Resist the alenics"
+ A65_idea_1_2:0 "Resist the Alenics"
  A65_idea_1_2_desc:0 "Bluefoot 1 desc"
  A65_idea_2_2:0 "Halfling Spirit"
  A65_idea_2_2_desc:0 "Bluefoot 2 desc"
- A65_idea_3_2:0 "Widderoy river"
+ A65_idea_3_2:0 "Widderoy River"
  A65_idea_3_2_desc:0 "Bluefoot 3 desc"
  A65_idea_4_2:0 "Cunning Traders"
  A65_idea_4_2_desc:0 "Bluefoot 4 desc"
- A65_idea_5_2:0 "Vet all outsiders"
+ A65_idea_5_2:0 "Vet All Outsiders"
  A65_idea_5_2_desc:0 "Bluefoot 5 desc"
- A65_idea_6_2:0 "Keepers of prosperity"
+ A65_idea_6_2:0 "Keepers of Prosperity"
  A65_idea_6_2_desc:0 "Bluefoot 6 desc"
  A65_idea_7_2:0 "Bushrangers"
  A65_idea_7_2_desc:0 "Bluefoot 7 desc"
@@ -3455,17 +3455,17 @@
  A65_ideas_3:0 "Bluefoot Ideas 3"
  A65_ideas_3_start:0 "Bluefoot Traditions 3"
  A65_ideas_3_bonus:0 "Bluefoot Ambition 3"
- A65_idea_1_3:0 "Resist the alenics"
+ A65_idea_1_3:0 "Resist the Alenics"
  A65_idea_1_3_desc:0 "Bluefoot 1 desc"
  A65_idea_2_3:0 "Halfling Spirit"
  A65_idea_2_3_desc:0 "Bluefoot 2 desc"
- A65_idea_3_3:0 "Widderoy river"
+ A65_idea_3_3:0 "Widderoy River"
  A65_idea_3_3_desc:0 "Bluefoot 3 desc"
  A65_idea_4_3:0 "Cunning Traders"
  A65_idea_4_3_desc:0 "Bluefoot 4 desc"
- A65_idea_5_3:0 "Vet all outsiders"
+ A65_idea_5_3:0 "Vet All Outsiders"
  A65_idea_5_3_desc:0 "Bluefoot 5 desc"
- A65_idea_6_3:0 "Keepers of prosperity"
+ A65_idea_6_3:0 "Keepers of Prosperity"
  A65_idea_6_3_desc:0 "Bluefoot 6 desc"
  A65_idea_7_3:0 "Bushrangers"
  A65_idea_7_3_desc:0 "Bluefoot 7 desc"
@@ -3474,17 +3474,17 @@
  A64_ideas_1:0 "Redfoot Ideas 1"
  A64_ideas_1_start:0 "Redfoot Traditions 1"
  A64_ideas_1_bonus:0 "Redfoot Ambition 1"
- A64_idea_1_1:0 "Bargain with the lencori"
+ A64_idea_1_1:0 "Bargain with the Lencori"
  A64_idea_1_1_desc:0 "Redfoot 1 desc"
  A64_idea_2_1:0 "Halfling Spirit"
  A64_idea_2_1_desc:0 "Redfoot 2 desc"
- A64_idea_3_1:0 "Middanroy river"
+ A64_idea_3_1:0 "Middanroy River"
  A64_idea_3_1_desc:0 "Redfoot 3 desc"
  A64_idea_4_1:0 "Cunning Traders"
  A64_idea_4_1_desc:0 "Redfoot 4 desc"
- A64_idea_5_1:0 "Connections across lencenor"
+ A64_idea_5_1:0 "Connections Across Lencenor"
  A64_idea_5_1_desc:0 "Redfoot 5 desc"
- A64_idea_6_1:0 "Keepers of prosperity"
+ A64_idea_6_1:0 "Keepers of Prosperity"
  A64_idea_6_1_desc:0 "Redfoot 6 desc"
  A64_idea_7_1:0 "Grainwardens"
  A64_idea_7_1_desc:0 "Redfoot 7 desc"
@@ -3492,17 +3492,17 @@
  A64_ideas_2:0 "Redfoot Ideas 2"
  A64_ideas_2_start:0 "Redfoot Traditions 2"
  A64_ideas_2_bonus:0 "Redfoot Ambition 2"
- A64_idea_1_2:0 "Bargain with the lencori"
+ A64_idea_1_2:0 "Bargain with the Lencori"
  A64_idea_1_2_desc:0 "Redfoot 1 desc"
  A64_idea_2_2:0 "Halfling Spirit"
  A64_idea_2_2_desc:0 "Redfoot 2 desc"
- A64_idea_3_2:0 "Middanroy river"
+ A64_idea_3_2:0 "Middanroy River"
  A64_idea_3_2_desc:0 "Redfoot 3 desc"
  A64_idea_4_2:0 "Cunning Traders"
  A64_idea_4_2_desc:0 "Redfoot 4 desc"
- A64_idea_5_2:0 "Connections across lencenor"
+ A64_idea_5_2:0 "Connections Across Lencenor"
  A64_idea_5_2_desc:0 "Redfoot 5 desc"
- A64_idea_6_2:0 "Keepers of prosperity"
+ A64_idea_6_2:0 "Keepers of Prosperity"
  A64_idea_6_2_desc:0 "Redfoot 6 desc"
  A64_idea_7_2:0 "Grainwardens"
  A64_idea_7_2_desc:0 "Redfoot 7 desc"
@@ -3510,17 +3510,110 @@
  A64_ideas_3:0 "Redfoot Ideas 3"
  A64_ideas_3_start:0 "Redfoot Traditions 3"
  A64_ideas_3_bonus:0 "Redfoot Ambition 3"
- A64_idea_1_3:0 "Bargain with the lencori"
+ A64_idea_1_3:0 "Bargain with the Lencori"
  A64_idea_1_3_desc:0 "Redfoot 1 desc"
  A64_idea_2_3:0 "Halfling Spirit"
  A64_idea_2_3_desc:0 "Redfoot 2 desc"
- A64_idea_3_3:0 "Middanroy river"
+ A64_idea_3_3:0 "Middanroy River"
  A64_idea_3_3_desc:0 "Redfoot 3 desc"
  A64_idea_4_3:0 "Cunning Traders"
  A64_idea_4_3_desc:0 "Redfoot 4 desc"
- A64_idea_5_3:0 "Connections across lencenor"
+ A64_idea_5_3:0 "Connections Across Lencenor"
  A64_idea_5_3_desc:0 "Redfoot 5 desc"
- A64_idea_6_3:0 "Keepers of prosperity"
+ A64_idea_6_3:0 "Keepers of Prosperity"
  A64_idea_6_3_desc:0 "Redfoot 6 desc"
  A64_idea_7_3:0 "Grainwardens"
  A64_idea_7_3_desc:0 "Redfoot 7 desc"
+
+
+ W18_ideas_2:0 "Nottlan Ideas 2"
+ W18_ideas_2_start:0 "Nottlan Traditions 2"
+ W18_ideas_2_bonus:0 "Nottlan Ambition 2"
+ W18_idea_1_2:0 "Bluefoot Ferocity"
+ W18_idea_1_2_desc:0 "Nottlan 1 desc"
+ W18_idea_2_2:0 "Halfling Spirit"
+ W18_idea_2_2_desc:0 "Nottlan 2 desc"
+ W18_idea_3_2:0 "Elkwood Timber"
+ W18_idea_3_2_desc:0 "Nottlan 3 desc"
+ W18_idea_4_2:0 "Cunning Traders"
+ W18_idea_4_2_desc:0 "Nottlan 4 desc"
+ W18_idea_5_2:0 "Grey Mills"
+ W18_idea_5_2_desc:0 "Nottlan 5 desc"
+ W18_idea_6_2:0 "Keepers of Prosperity"
+ W18_idea_6_2_desc:0 "Nottlan 6 desc"
+ W18_idea_7_2:0 "Bluefoot Supremacy"
+ W18_idea_7_2_desc:0 "Nottlan 7 desc"
+
+ W18_ideas_3:0 "Nottlan Ideas 3"
+ W18_ideas_3_start:0 "Nottlan Traditions 3"
+ W18_ideas_3_bonus:0 "Nottlan Ambition 3"
+ W18_idea_1_3:0 "Bluefoot Ferocity"
+ W18_idea_1_3_desc:0 "Nottlan 1 desc"
+ W18_idea_2_3:0 "Halfling Spirit"
+ W18_idea_2_3_desc:0 "Nottlan 2 desc"
+ W18_idea_3_3:0 "Elkwood Timber"
+ W18_idea_3_3_desc:0 "Nottlan 3 desc"
+ W18_idea_4_3:0 "Cunning Traders"
+ W18_idea_4_3_desc:0 "Nottlan 4 desc"
+ W18_idea_5_3:0 "Grey Mills"
+ W18_idea_5_3_desc:0 "Nottlan 5 desc"
+ W18_idea_6_3:0 "Keepers of Prosperity"
+ W18_idea_6_3_desc:0 "Nottlan 6 desc"
+ W18_idea_7_3:0 "Bluefoot Supremacy"
+ W18_idea_7_3_desc:0 "Nottlan 7 desc"
+
+
+ W17_ideas_2:0 "Sottlan Ideas 2"
+ W17_ideas_2_start:0 "Sottlan Traditions 2"
+ W17_ideas_2_bonus:0 "Sottlan Ambition 2"
+ W17_idea_1_2:0 "Redfoot Courage"
+ W17_idea_1_2_desc:0 "Sottlan 1 desc"
+ W17_idea_2_2:0 "Halfling Spirit"
+ W17_idea_2_2_desc:0 "Sottlan 2 desc"
+ W17_idea_3_2:0 "Bigwheat Graineries"
+ W17_idea_3_2_desc:0 "Sottlan 3 desc"
+ W17_idea_4_2:0 "Cunning Traders"
+ W17_idea_4_2_desc:0 "Sottlan 4 desc"
+ W17_idea_5_2:0 "Coppertown Mines"
+ W17_idea_5_2_desc:0 "Sottlan 5 desc"
+ W17_idea_6_2:0 "Keepers of Prosperity"
+ W17_idea_6_2_desc:0 "Sottlan 6 desc"
+ W17_idea_7_2:0 "Redfoot Supremacy"
+ W17_idea_7_2_desc:0 "Sottlan 7 desc"
+
+ W17_ideas_3:0 "Sottlan Ideas 3"
+ W17_ideas_3_start:0 "Sottlan Traditions 3"
+ W17_ideas_3_bonus:0 "Sottlan Ambition 3"
+ W17_idea_1_3:0 "Redfoot Courage"
+ W17_idea_1_3_desc:0 "Sottlan 1 desc"
+ W17_idea_2_3:0 "Halfling Spirit"
+ W17_idea_2_3_desc:0 "Sottlan 2 desc"
+ W17_idea_3_3:0 "Bigwheat Graineries"
+ W17_idea_3_3_desc:0 "Sottlan 3 desc"
+ W17_idea_4_3:0 "Cunning Traders"
+ W17_idea_4_3_desc:0 "Sottlan 4 desc"
+ W17_idea_5_3:0 "Coppertown Mines"
+ W17_idea_5_3_desc:0 "Sottlan 5 desc"
+ W17_idea_6_3:0 "Keepers of Prosperity"
+ W17_idea_6_3_desc:0 "Sottlan 6 desc"
+ W17_idea_7_3:0 "Redfoot Supremacy"
+ W17_idea_7_3_desc:0 "Sottlan 7 desc"
+
+
+ A97_ideas_3:0 "Small Country Ideas 3"
+ A97_ideas_3_start:0 "Small Country Traditions 3"
+ A97_ideas_3_bonus:0 "Small Country Ambition 3"
+ A97_idea_1_3:0 "Redfoot Courage, Bluefoot Ferocity"
+ A97_idea_1_3_desc:0 "Small Country 1 desc"
+ A97_idea_2_3:0 "Halfling Spirit"
+ A97_idea_2_3_desc:0 "Small Country 2 desc"
+ A97_idea_3_3:0 "Breadbasket of Cannor"
+ A97_idea_3_3_desc:0 "Small Country 3 desc"
+ A97_idea_4_3:0 "Cunning Traders"
+ A97_idea_4_3_desc:0 "Small Country 4 desc"
+ A97_idea_5_3:0 "Largest Small Country"
+ A97_idea_5_3_desc:0 "Small Country 5 desc"
+ A97_idea_6_3:0 "Keepers of Prosperity"
+ A97_idea_6_3_desc:0 "Small Country 6 desc"
+ A97_idea_7_3:0 "Unity at Last"
+ A97_idea_7_3_desc:0 "Small Country 7 desc"
