Viswall, Beepeck, Newshire ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3617,3 +3617,114 @@
  A97_idea_6_3_desc:0 "Small Country 6 desc"
  A97_idea_7_3:0 "Unity at Last"
  A97_idea_7_3_desc:0 "Small Country 7 desc"
+
+
+ Z39_ideas_2:0 "Viswall Ideas 2"
+ Z39_ideas_2_start:0 "Viswall Traditions 2"
+ Z39_ideas_2_bonus:0 "Viswall Ambition 2"
+ Z39_idea_1_2:0 "Visfoot Authority"
+ Z39_idea_1_2_desc:0 "Viswall 1 desc"
+ Z39_idea_2_2:0 "Halfling Spirit"
+ Z39_idea_2_2_desc:0 "Viswall 2 desc"
+ Z39_idea_3_2:0 "City of Colours"
+ Z39_idea_3_2_desc:0 "Viswall 3 desc"
+ Z39_idea_4_2:0 "Cunning Traders"
+ Z39_idea_4_2_desc:0 "Viswall 4 desc"
+ Z39_idea_5_2:0 "Divided Never Again"
+ Z39_idea_5_2_desc:0 "Viswall 5 desc"
+ Z39_idea_6_2:0 "Keepers of Prosperity"
+ Z39_idea_6_2_desc:0 "Viswall 6 desc"
+ Z39_idea_7_2:0 "Halfling Capital"
+ Z39_idea_7_2_desc:0 "Viswall 7 desc"
+
+ Z39_ideas_3:0 "Viswall Ideas 3"
+ Z39_ideas_3_start:0 "Viswall Traditions 3"
+ Z39_ideas_3_bonus:0 "Viswall Ambition 3"
+ Z39_idea_1_3:0 "Visfoot Authority"
+ Z39_idea_1_3_desc:0 "Viswall 1 desc"
+ Z39_idea_2_3:0 "Halfling Spirit"
+ Z39_idea_2_3_desc:0 "Viswall 2 desc"
+ Z39_idea_3_3:0 "City of Colours"
+ Z39_idea_3_3_desc:0 "Viswall 3 desc"
+ Z39_idea_4_3:0 "Cunning Traders"
+ Z39_idea_4_3_desc:0 "Viswall 4 desc"
+ Z39_idea_5_3:0 "Divided Never Again"
+ Z39_idea_5_3_desc:0 "Viswall 5 desc"
+ Z39_idea_6_3:0 "Keepers of Prosperity"
+ Z39_idea_6_3_desc:0 "Viswall 6 desc"
+ Z39_idea_7_3:0 "Halfling Capital"
+ Z39_idea_7_3_desc:0 "Viswall 7 desc"
+
+
+ A12_ideas_2:0 "Beepeck Ideas 2"
+ A12_ideas_2_start:0 "Beepeck Traditions 2"
+ A12_ideas_2_bonus:0 "Beepeck Ambition 2"
+ A12_idea_1_2:0 "Imperial Prestige"
+ A12_idea_1_2_desc:0 "Beepeck 1 desc"
+ A12_idea_2_2:0 "Halfling Spirit"
+ A12_idea_2_2_desc:0 "Beepeck 2 desc"
+ A12_idea_3_2:0 "The Largest Small City"
+ A12_idea_3_2_desc:0 "Beepeck 3 desc"
+ A12_idea_4_2:0 "Cunning Traders"
+ A12_idea_4_2_desc:0 "Beepeck 4 desc"
+ A12_idea_5_2:0 "Liberators of the Small Country"
+ A12_idea_5_2_desc:0 "Beepeck 5 desc"
+ A12_idea_6_2:0 "Keepers of Prosperity"
+ A12_idea_6_2_desc:0 "Beepeck 6 desc"
+ A12_idea_7_2:0 "Finest Traders in the Dameshead"
+ A12_idea_7_2_desc:0 "Beepeck 7 desc"
+
+ A12_ideas_3:0 "Beepeck Ideas 3"
+ A12_ideas_3_start:0 "Beepeck Traditions 3"
+ A12_ideas_3_bonus:0 "Beepeck Ambition 3"
+ A12_idea_1_3:0 "Imperial Prestige"
+ A12_idea_1_3_desc:0 "Beepeck 1 desc"
+ A12_idea_2_3:0 "Halfling Spirit"
+ A12_idea_2_3_desc:0 "Beepeck 2 desc"
+ A12_idea_3_3:0 "The Largest Small City"
+ A12_idea_3_3_desc:0 "Beepeck 3 desc"
+ A12_idea_4_3:0 "Cunning Traders"
+ A12_idea_4_3_desc:0 "Beepeck 4 desc"
+ A12_idea_5_3:0 "Liberators of the Small Country"
+ A12_idea_5_3_desc:0 "Beepeck 5 desc"
+ A12_idea_6_3:0 "Keepers of Prosperity"
+ A12_idea_6_3_desc:0 "Beepeck 6 desc"
+ A12_idea_7_3:0 "Finest Traders in the Dameshead"
+ A12_idea_7_3_desc:0 "Beepeck 7 desc"
+
+
+ B50_ideas_2:0 "Newshire Ideas 2"
+ B50_ideas_2_start:0 "Newshire Traditions 2"
+ B50_ideas_2_bonus:0 "Newshire Ambition 2"
+ B50_idea_1_2:0 "Memories of the Greentide"
+ B50_idea_1_2_desc:0 "Newshire 1 desc"
+ B50_idea_2_2:0 "Halfling Spirit"
+ B50_idea_2_2_desc:0 "Newshire 2 desc"
+ B50_idea_3_2:0 "Orcish 'Volunteers'"
+ B50_idea_3_2_desc:0 "Newshire 3 desc"
+ B50_idea_4_2:0 "Cunning Traders"
+ B50_idea_4_2_desc:0 "Newshire 4 desc"
+ B50_idea_5_2:0 "The Door we Should Never Have Opened"
+ B50_idea_5_2_desc:0 "Newshire 5 desc"
+ B50_idea_6_2:0 "Keepers of Prosperity"
+ B50_idea_6_2_desc:0 "Newshire 6 desc"
+ B50_idea_7_2:0 "Giveth to Halann, and Halann Giveth Back"
+ B50_idea_7_2_desc:0 "Newshire 7 desc"
+
+ B50_ideas_3:0 "Newshire Ideas 3"
+ B50_ideas_3_start:0 "Newshire Traditions 3"
+ B50_ideas_3_bonus:0 "Newshire Ambition 3"
+ B50_idea_1_3:0 "Memories of the Greentide"
+ B50_idea_1_3_desc:0 "Newshire 1 desc"
+ B50_idea_2_3:0 "Halfling Spirit"
+ B50_idea_2_3_desc:0 "Newshire 2 desc"
+ B50_idea_3_3:0 "Orcish 'Volunteers'"
+ B50_idea_3_3_desc:0 "Newshire 3 desc"
+ B50_idea_4_3:0 "Cunning Traders"
+ B50_idea_4_3_desc:0 "Newshire 4 desc"
+ B50_idea_5_3:0 "The Door we Should Never Have Opened"
+ B50_idea_5_3_desc:0 "Newshire 5 desc"
+ B50_idea_6_3:0 "Keepers of Prosperity"
+ B50_idea_6_3_desc:0 "Newshire 6 desc"
+ B50_idea_7_3:0 "Giveth to Halann, and Halann Giveth Back"
+ B50_idea_7_3_desc:0 "Newshire 7 desc"
